[project]
name = "spec_mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dpath>=2.2.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openapi-merger",
    "pyyaml>=6.0.2",
    "uv>=0.8.13",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
openapi-merger = { path = "openapi-merge/target/wheels/openapi_merger-0.1.0-cp313-cp313-manylinux_2_34_x86_64.whl" }
