[project]
name = "spec_mesh"
version = "0.0.1"
description = "Spec Mesh"
requires-python = ">=3.13"
dependencies = [
    "dpath>=2.2.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "uv>=0.8.13",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
]
