[package]
name = "openapi_merger"
version = "0.1.0"
edition = "2021"

[lib]
name = "openapi_merger"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
url = "2.4"
regex = "1"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
